Use a default non-administrator user Type for new users in model

Summary:
If the administrator role was not set for the index assume the default normal user type.

Regression was introduced in D25398.

BUG: 414860
FIXED-IN: 5.18

Test Plan: Created a user as described in https://bugs.kde.org/show_bug.cgi?id=414860

Reviewers: ngraham, #plasma, apol

Reviewed By: ngraham

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D25976